# TicTacToe

./: .gitignore  CMakeLists.txt  main.cpp
inc/backend/: ai.hpp  backend.hpp  board.hpp  player.hpp
inc/ui/: qt_utils.hpp  ui.hpp
src/backend/: backend.cpp  board.cpp
src/backend/ai/: minimax.cpp  mtd.cpp  random.cpp
src/ui/: buttons_board.cpp  ui.cpp
styles/: style.qss
